src/test/compile-fail/occurs-check.rs
fn main() {
    let f; //~ ERROR cyclic type of infinite size
    f = @f;
}
